[package]
name = "shuk"
description = "A command line tool that uploads files to Amazon S3 buckets, and generates presigned URLs for easy sharing."
version = "0.4.5"
edition = "2021"
authors = ["Darko Mesaros <d@rko.rs>"]
license = "MIT OR Apache-2.0"
keywords = ["aws", "s3", "filesharing"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://rup12.net"
repository = "https://github.com/darko-mesaros/shuk"
exclude = [
"img/*"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
#aws-config = "1.1.7"
aws-config = "1.5.10"
#aws-sdk-s3 = { version = "1.17.0", features = ["rt-tokio"] }
aws-sdk-s3 = { version = "1.61.0", features = ["rt-tokio"] }
# aws-smithy-runtime-api = { version = "1.1.7", features = ["client"] }
aws-smithy-runtime-api = { version = "1.7.3", features = ["client"] }
# aws-smithy-types = { version = "1.1.7", features = ["http-body-0-4-x"] }
aws-smithy-types = { version = "1.2.9", features = ["http-body-0-4-x"] }
# aws-types = "1.1.7"
aws-types = "1.3.3"
bytes = "1.5.0"
chrono = "0.4.38"
clap = { version = "4.5.2", features = ["derive"] }
clipboard = "0.5.0"
clipboard-ext = "0.2.0"
colored = "2.1.0"
dirs = "5.0.1"
env_logger = "0.11.5"
http = "0.2.12"
http-body = "0.4.6"
indicatif = "0.17.8"
log = "0.4.22"
md5 = "0.7.0"
pin-project = "1.1.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
