[package]
name = "shuk"
description = "A command line tool that uploads files to Amazon S3 buckets, and generates presigned URLs for easy sharing."
version = "0.4.8"
edition = "2021"
authors = ["Darko Mesaros <d@rko.rs>"]
license = "MIT OR Apache-2.0"
keywords = ["aws", "s3", "filesharing"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://rup12.net"
repository = "https://github.com/darko-mesaros/shuk"
exclude = [
"img/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pkg-config = "0.3.33"

[dependencies]
anyhow = "1.0.102"
aws-config = "1.8.16"
aws-sdk-s3 = { version = "1.132.0", features = ["rt-tokio"] }
aws-smithy-runtime-api = { version = "1.12.0", features = ["client"] }
aws-smithy-types = { version = "1.4.7", features = ["http-body-1-x"] }
aws-types = "1.3.15"
bytes = "1.11.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
env_logger = "0.11.10"
http = "1.4.0"
http-body = "1.0.1"
indicatif = "0.18.4"
log = "0.4.29"
md5 = "0.8.0"
pin-project = "1.1.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
